added /search endPoint
